# spectral_rt

./: AUTHORS  CMakeLists.txt  README  TODO  configuration.ccl  interface.ccl  param.ccl  schedule.ccl
par/: spectralrt.par
src/: 1D_1st_order_ODE.c  CMakeLists.txt  Calculate_Integration_Weights.c  CartGrid1D.c  ChebyshevPolynomials.c  ChebyshevPolynomials.h  GaussLobatto.c  GaussLobatto.h  InitialData.c  SetupCoords.c  Startup.c  approx_result.c  approx_result.h  c_bar.c  c_bar.h  calc_chebyshev_derivative_matrix_1.c  calc_chebyshev_derivative_matrix_1.h  chebyshev_polynomials.c  chebyshev_polynomials.h  error_codes.h  gauss_lobatto.c  gauss_lobatto.h  globals.h  main.c  make.code.defn
